# studypie-test

./: README.md
backend/: .coveragerc  README.md  manage.py  pytest.ini  requirements.txt
backend/apps/boards/: models.py  schema.py  tests.py
backend/apps/boards/migrations/: 0001_initial.py  0002_auto_20210302_1309.py
backend/apps/users/: schema.py  tests.py  views.py
backend/studypie/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
backend/studypie-alarms/: requirements.txt  setup.cfg
backend/studypie-alarms/alarms/: consumers.py  models.py  routing.py  schema.py
backend/studypie-alarms/alarms/migrations/: 0001_initial.py  0002_alarm_is_checked.py
backend/studypie-points/: MANIFEST.in  manage.py  pytest.ini  setup.cfg
backend/studypie-points/points/: actions.py  admin.py  decorators.py  models.py  schema.py  tests.py
backend/studypie-points/points/migrations/: 0001_initial.py  0002_auto_20210306_1318.py  0003_auto_20210306_1320.py
backend/studypie-points/studypie_points/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
frontend/: .eslintrc.js  README.md  package-lock.json  package.json
frontend/src/: App.vue  vue-apollo.js
frontend/src/common/: auth.js  utils.js
frontend/src/components/: CreateBoardDialog.vue  HelloWorld.vue  PostTable.vue
frontend/src/components/PointTabs/: Layout.vue  PointConsumed.vue  PointExpired.vue  PointIssued.vue
frontend/src/router/: index.js
frontend/src/views/: Home.vue  Login.vue
frontend/src/views/errors/: Network.vue
frontend/src/views/home/: Alarm.vue  Board.vue  Layout.vue  Point.vue  Post.vue
(+1 files in other folders)
